--- a/views/posts/index.erb
+++ b/views/posts/index.erb
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title> <%= @title %> </title>
-  </head>
-  <body>
-    <nav>
-      <a href="/">Posts</a>
-      <a href="/new">New Post</a>
-    </nav>
-    <h1>Welcome to the Homepage</h1>
-  </body>
-</html>
+  <h1>Welcome to the Homepage</h1>
+  <%= @posts %>
+
+  <% @posts.each do |post| %>
+    <!-- <a href="/posts/<%= post[:id] %>"><h3><%= post[:title] %></h3></a> -->
+
+    <a href="/<%= post[:id] %>"><h3><%= post[:title] %></h3></a>
+    <a href="/<%= post[:id] %>/edit"><h3>Edit</h3></a>
+
+    <form action="/<%= post[:id] %>" method="post">
+      <input type="submit" value="DELETE">
+      <input type="hidden" name="_method" value="DELETE">
+    </form>
+
+  <% end %>
